--- a/mylsf/index.html
+++ b/mylsf/index.html
@@ -3,8 +3,58 @@
   <head>
     <meta charset='utf-8'>
     <title>MyLSF MockUp</title>
+    <link href='../bower_components/mobile-angular-ui/dist/css/mobile-angular-ui-hover.min.css' rel='stylesheet'>
+    <link href='../bower_components/mobile-angular-ui/dist/css/mobile-angular-ui-base.min.css' rel='stylesheet'>
+    <link href='../bower_components/mobile-angular-ui/dist/css/mobile-angular-ui-desktop.min.css' rel='stylesheet'>
   </head>
   <body>
-    <h1>Such</h1>
+    <div class='sidebar sidebar-left' id='mainSidebar' parent-active-class='sidebar-left-in' toggleable>
+      <h1 class='app-name'>My App</h1>
+      <div class='scrollable'>
+        <div class='scrollable-content'>
+          <div bubble class='list-group' target='mainSidebar' toggle='off'>
+            <a class='list-group-item' href='#/'>
+              Home
+              <i class='fa fa-chevron-right pull-right'></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class='app'>
+      <div class='navbar navbar-app navbar-absolute-top'>
+        <div class='navbar-brand navbar-brand-center' yield-to='title'>
+          <span>My App</span>
+        </div>
+        <div class='btn-group pull-left'>
+          <div class='btn btn-navbar sidebar-toggle' ng-click='toggle("mainSidebar")'>
+            <i class='fa fa-bars'></i>
+            Menu
+          </div>
+        </div>
+        <div class='btn-group pull-right' yield-to='navbarAction'>
+          <div class='btn btn-navbar'>
+            <i class='fa fa-plus'></i>
+            New
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class='navbar navbar-app navbar-absolute-bottom'>
+      <div class='btn-group justified'>
+        <a class='btn btn-navbar btn-icon-only' href='#/route1'>
+          <i class='fa fa-home fa-navbar'></i>
+        </a>
+        <a class='btn btn-navbar btn-icon-only' href='#/route2'>
+          <i class='fa fa-list fa-navbar'></i>
+        </a>
+      </div>
+    </div>
+    <div class='app-body'>
+      <ng-view class='app-content'></ng-view>
+    </div>
+    <script src='angular.min.js'></script>
+    <script src='angular-route.min.js'></script>
+    <script src='mobile-angular-ui/dist/js/mobile-angular-ui.min.js'></script>
   </body>
 </html>
