--- a/mylsf/index.html
+++ b/mylsf/index.html
@@ -53,8 +53,7 @@
     <div class='app-body'>
       <ng-view class='app-content'></ng-view>
     </div>
-    <script src='angular.min.js'></script>
-    <script src='angular-route.min.js'></script>
-    <script src='mobile-angular-ui/dist/js/mobile-angular-ui.min.js'></script>
+    <script src='../bower_components/angular/angular.min.js'></script>
+    <script src='../bower_components/mobile-angular-ui/dist/js/mobile-angular-ui.min.js'></script>
   </body>
 </html>
