Tracking GamePad API demo.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       <li>
         <a href='./mylsf'>MyLSF</a>
       </li>
+      <li>
+        <a href='./gamepad-api/gamepadapi-demo.html'>GamePad API</a>
+      </li>
     </ol>
   </body>
 </html>
