Prototype of collaborative research planning.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <li>
         <a href='./gamepad-api/gamepadapi-demo.html'>GamePad API</a>
       </li>
+      <li>
+        <a href='./suk-research'>Forschungstabelle für Schlacht-um-Kyoto</a>
+      </li>
     </ol>
   </body>
 </html>
