--- a/suk-research/index.html
+++ b/suk-research/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     Schlacht Um Kyoto
-    <button id='togetherjs'>Start TogetherJS</button>
+    <button id='togetherjs' onclick='TogetherJS(this); return false;'>Start TogetherJS</button>
     <div id='add'>+</div>
     <table id='research'>
       <tr>
@@ -152,9 +152,10 @@
     </script>
     <script>
       var res = document.querySelector('#research');
-      var data = JSON.parse(window.sessionStorage.getItem('data'));
+      var data = JSON.parse(window.sessionStorage.getItem('data')) || {};
       var row;
-      var rows = Object.keys(data).length;
+      var rows = Object.keys(data).length || 0;
+      console.log(data,rows);
       for (nRows = 0; nRows < rows; nRows++) {
         appendRow();
         row = res.lastChild;
@@ -182,9 +183,6 @@
       }
     </script>
     <script>
-      var tgth = document.querySelector('#togetherjs');
-      tgth.addEventListener('click', function(TogetherJS) {
-      }, false);
       TogetherJSConfig_dontShowClicks = true;
       TogetherJSConfig_cloneClicks = true;
     </script>
