--- a/suk-research/index.html
+++ b/suk-research/index.html
@@ -174,7 +174,7 @@
   <body>
     <header>
       <h1 class='title'>Schlacht Um Kyoto</h1>
-      <button id='togetherjs' onclick='TogetherJS(this); return false;'>Kollaborieren</button>
+      <button data-end-togetherjs-html='Alleine' id='togetherjs' onclick='TogetherJS(this); return false;' type='button'>Kollaborieren</button>
       <nav>
         <a href='#research' id='Schreiberschule'>Schreiberschule</a>
         <a href='#development' id='Schmiede'>Schmiede</a>
