Link to bookmarklet

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <li>
         <a href='./suk-research'>Forschungstabelle für Schlacht-um-Kyoto</a>
       </li>
+      <li>
+        <a href='./tangrams-bookmarklet'>Bookmarklet für Tangrams</a>
+      </li>
     </ol>
   </body>
 </html>
