--- a/js13kgames/index.html
+++ b/js13kgames/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-        <meta charset="latin-1" />
+        <!-- FIXME: latin-1 -->
+        <meta charset="utf-8" />
         <title>K-Breaker-Panel for js13kgames competition</title>
+        <link rel="stylesheet" href="build/js13k-breaker-panel.min.css" />
     </head>
     <body>
         <h1>K-Breaker-Panel for js13kgames competition</h1>
