--- a/js13kgames/index.html
+++ b/js13kgames/index.html
@@ -17,6 +17,6 @@
         </main>
         <script type="text/javascript" src="build/js13k-breaker-panel.min.js"></script>
         <!-- For live debugging -->
-        <script type="text/javascript" src="src/debug.js"></script>
+        <script type="text/javascript" src="src/js/debug.js"></script>
     </body>
 </html>
