Render closed switches

--- a/js13kgames/index.html
+++ b/js13kgames/index.html
@@ -14,7 +14,7 @@
             </a>
         </aside>
         <main id="game">
-            <img src="build/switch.svg" alt="Switch" />
+            <img src="build/switch-closed.svg" alt="Switch" />
         </main>
         <script type="text/javascript" src="build/js13k-breaker-panel.min.js"></script>
         <!-- For live debugging -->
