--- a/js13kgames/index.html
+++ b/js13kgames/index.html
@@ -13,9 +13,9 @@
                 Fork me on GitHub!
             </a>
         </aside>
-        <main id="game">
+        <div id="game">
             <img src="build/switch-closed.svg" alt="Switch" />
-        </main>
+        </div>
         <script type="text/javascript" src="build/js13k-breaker-panel.min.js"></script>
         <!-- For live debugging -->
         <script type="text/javascript" src="src/js/debug.js"></script>
