--- a/js13kgames/index.html
+++ b/js13kgames/index.html
@@ -9,7 +9,8 @@
     <body>
         <h1>K-Breaker-Panel for js13kgames competition</h1>
         <aside id="fork-on-github">
-            <a href="https://github.com/Ryuno-Ki.github.io/js13kames/" target="_blank" rel="nofollow">
+            <a href="https://github.com/Ryuno-Ki/Ryuno-Ki.github.io/tree/master/js13kgames" target="_blank"
+               rel="nofollow">
                 Fork me on GitHub!
             </a>
         </aside>
