--- a/js13kgames/index.html
+++ b/js13kgames/index.html
@@ -14,9 +14,7 @@
                 Fork me on GitHub!
             </a>
         </aside>
-        <div id="game">
-            <img src="build/switch-closed.svg" alt="Switch" />
-        </div>
+        <div id="game"></div>
         <script type="text/javascript" src="build/js13k-breaker-panel.min.js"></script>
         <!-- For live debugging -->
         <script type="text/javascript" src="src/js/debug.js"></script>
