Debug style helper css file.

--- a/js13kgames/index.html
+++ b/js13kgames/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8" />
         <title>K-Breaker-Panel for js13kgames competition</title>
         <link rel="stylesheet" href="build/js13k-breaker-panel.min.css" />
+        <link rel="stylesheet" href="src/css/debug.css" />
     </head>
     <body>
         <h1>K-Breaker-Panel for js13kgames competition</h1>
