--- a/js13kgames/index.html
+++ b/js13kgames/index.html
@@ -8,14 +8,21 @@
         <link rel="stylesheet" href="src/css/debug.css" />
     </head>
     <body>
-        <h1>K-Breaker-Panel for js13kgames competition</h1>
-        <aside id="fork-on-github">
-            <a href="https://github.com/Ryuno-Ki/Ryuno-Ki.github.io/tree/master/js13kgames" target="_blank"
-               rel="nofollow">
-                Fork me on GitHub!
-            </a>
-        </aside>
-        <div id="game"></div>
+        <div id="wrap">
+            <header>
+                <h1>K-Breaker-Panel</h1>
+            </header>
+            <aside id="fork-on-github">
+                <a href="https://github.com/Ryuno-Ki/Ryuno-Ki.github.io/tree/master/js13kgames" target="_blank"
+                   rel="nofollow">
+                    Fork me on GitHub!
+                </a>
+            </aside>
+            <div id="game"></div>
+            <footer>
+                <a href="#">License</a>
+            </footer>
+        </div>
         <script type="text/javascript" src="build/js13k-breaker-panel.min.js"></script>
     </body>
 </html>
