Link to LICENSE, since it's too big to include.

--- a/js13kgames/index.html
+++ b/js13kgames/index.html
@@ -20,7 +20,8 @@
             </aside>
             <div id="game"></div>
             <footer>
-                <a href="#">License</a>
+                <a href="https://github.com/Ryuno-Ki/Ryuno-Ki.github.io/tree/master/js13kgames/LICENSE.txt"
+                   target="_blank">License</a>
             </footer>
         </div>
         <script type="text/javascript" src="build/js13k-breaker-panel.min.js"></script>
