--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
-<html lang='de'>
-  <head>
-    <meta charset='utf-8'>
-    <title>Übersicht über Projekte/MockUps</title>
-  </head>
-  <body>
-    <h1>MockUps</h1>
-    <ol>
-      <li>
-        <a href='./mylsf'>MyLSF</a>
-      </li>
-      <li>
-        <a href='./gamepad-api/gamepadapi-demo.html'>GamePad API</a>
-      </li>
-      <li>
-        <a href='./suk-research'>Forschungstabelle für Schlacht-um-Kyoto</a>
-      </li>
-      <li>
-        <a href='./tangrams-bookmarklet'>Bookmarklet für Tangrams</a>
-      </li>
-    </ol>
-  </body>
+<html lang="en" dir="ltr">
+    <head>
+        <!-- FIXME: latin-1 -->
+        <meta charset="utf-8" />
+        <title>K-Breaker-Panel for js13kgames competition</title>
+        <link rel="stylesheet" href="build/js13k-breaker-panel.min.css" />
+        <link rel="stylesheet" href="src/css/debug.css" />
+    </head>
+    <body>
+        <div id="wrap">
+            <header>
+                <h1>K-Breaker-Panel</h1>
+            </header>
+            <aside id="fork-on-github">
+                <a href="https://github.com/Ryuno-Ki/Ryuno-Ki.github.io/tree/master/js13kgames" target="_blank"
+                   rel="nofollow">
+                    Fork me on GitHub!
+                </a>
+            </aside>
+            <div id="game"></div>
+            <footer>
+                <a href="https://github.com/Ryuno-Ki/js13kgames/LICENSE.txt" target="_blank">
+                    License
+                </a>
+            </footer>
+        </div>
+        <script type="text/javascript" src="build/js13k-breaker-panel.min.js"></script>
+    </body>
 </html>
