Migrate to RequireJS.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-        <!-- FIXME: latin-1 -->
+        <!-- FIXME: windows-1252 -->
         <meta charset="utf-8" />
         <title>K-Breaker-Panel for js13kgames competition</title>
         <link rel="stylesheet" href="build/js13k-breaker-panel.min.css" />
@@ -25,6 +25,6 @@
                 </a>
             </footer>
         </div>
-        <script type="text/javascript" src="build/js13k-breaker-panel.min.js"></script>
+        <script type="text/javascript" data-main="build/app.min.js" src="build/require.min.js"></script>
     </body>
 </html>
