--- a/index.html
+++ b/index.html
@@ -11,18 +11,59 @@
         <div id="wrap">
             <header>
                 <h1>K-Breaker-Panel</h1>
+                <div id="prequel">
+                    <p>
+                        Oh, no!
+                    </p>
+                    <p>
+                        We got strucked by a lightning! And our electronic technian went on holiday last week.
+                    </p>
+                    <p>
+                        Can you help us get on speed again? Have a look at this breaker panel.
+                    </p>
+                    <p>
+                        I found some instructions for you which explain the elements.
+                    </p>
+                </div>
             </header>
-            <aside id="fork-on-github">
-                <a href="https://github.com/Ryuno-Ki/Ryuno-Ki.github.io/tree/master/js13kgames" target="_blank"
-                   rel="nofollow">
-                    Fork me on GitHub!
-                </a>
-            </aside>
             <div id="game"></div>
             <footer>
-                <a href="https://github.com/Ryuno-Ki/js13kgames/blob/master/LICENSE.txt" target="_blank">
-                    License
-                </a>
+                <p id="fork-on-github">
+                    <a href="https://github.com/Ryuno-Ki/Ryuno-Ki.github.io/tree/master/js13kgames" target="_blank"
+                       rel="nofollow">
+                        Fork me on GitHub!
+                    </a>
+                </p>
+                <div>
+                    <div class="explanation" data-electronic="PowerSource">
+                        <svg viewbox="0 0 25 25" version="1.1" xmlns="http://www.w3.org/2000/svg" width="25" height="25">
+                        </svg>
+                        <p>
+                            This is a power source. It serves the energy we need. You'll find only one in the breaker panel.
+                        </p>
+                    </div>
+                    <div class="explanation" data-electronic="SwitchElement">
+                        <svg viewbox="0 0 25 25" version="1.1" xmlns="http://www.w3.org/2000/svg" width="25" height="25">
+                        </svg>
+                        <p>
+                            This is a switch. When closed, electricity will run through the cables. You'll notice that.
+                        </p>
+                    </div>
+                    <div class="explanation" data-electronic="Consumer">
+                        <svg viewbox="0 0 25 25" version="1.1" xmlns="http://www.w3.org/2000/svg" width="25" height="25">
+                        </svg>
+                        <p>
+                            This is a consumer. The electricity needs to end here. Our machines will work then.
+                        </p>
+                </div>
+                <p>
+                    <a href="https://github.com/Ryuno-Ki/js13kgames/blob/master/LICENSE.txt" target="_blank">
+                        License
+                    </a>
+                </p>
+                <p>
+                    Follow me on <a href="https://twitter.com/AndreJaenisch" target="_blank">Twitter</a>
+                </p>
             </footer>
         </div>
         <script type="text/javascript" data-main="build/app.min.js" src="build/require.min.js"></script>
