--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <!-- FIXME: windows-1252 -->
         <meta charset="utf-8" />
         <title>K-Breaker-Panel for js13kgames competition</title>
-        <link rel="stylesheet" href="build/js13k-breaker-panel.min.css" />
-        <link rel="stylesheet" href="src/css/debug.css" />
+        <link rel="stylesheet" href="app.min.css" />
     </head>
     <body>
         <div id="wrap">
@@ -28,12 +27,6 @@
             </header>
             <div id="game"></div>
             <footer>
-                <p id="fork-on-github">
-                    <a href="https://github.com/Ryuno-Ki/Ryuno-Ki.github.io/tree/master/js13kgames" target="_blank"
-                       rel="nofollow">
-                        Fork me on GitHub!
-                    </a>
-                </p>
                 <div>
                     <div class="explanation" data-electronic="PowerSource">
                         <svg viewbox="0 0 25 25" version="1.1" xmlns="http://www.w3.org/2000/svg" width="25" height="25">
@@ -42,7 +35,7 @@
                             This is a power source. It serves the energy we need. You'll find only one in the breaker panel.
                         </p>
                     </div>
-                    <div class="explanation" data-electronic="SwitchElement">
+                    <div class="explanation" data-electronic="Switch">
                         <svg viewbox="0 0 25 25" version="1.1" xmlns="http://www.w3.org/2000/svg" width="25" height="25">
                         </svg>
                         <p>
@@ -56,6 +49,12 @@
                             This is a consumer. The electricity needs to end here. Our machines will work then.
                         </p>
                 </div>
+                <p id="fork-on-github">
+                    <a href="https://github.com/Ryuno-Ki/Ryuno-Ki.github.io/tree/master/js13kgames" target="_blank"
+                       rel="nofollow">
+                        Fork me on GitHub!
+                    </a>
+                </p>
                 <p>
                     <a href="https://github.com/Ryuno-Ki/js13kgames/blob/master/LICENSE.txt" target="_blank">
                         License
@@ -66,6 +65,6 @@
                 </p>
             </footer>
         </div>
-        <script type="text/javascript" data-main="build/app.min.js" src="build/require.min.js"></script>
+        <script type="text/javascript" data-main="app.min.js" src="require.min.js"></script>
     </body>
 </html>
