--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" manifest="game.appcache">
     <head>
-        <!-- FIXME: windows-1252 -->
         <meta charset="utf-8" />
-        <title>K-Breaker-Panel for js13kgames competition</title>
+        <title>Breaker-Panel for js13kgames competition</title>
         <link rel="stylesheet" href="app.min.css" />
     </head>
     <body>
         <div id="wrap">
             <header>
-                <h1>K-Breaker-Panel</h1>
+                <h1>Breaker-Panel</h1>
                 <div id="prequel">
                     <p>
                         Oh, no!
@@ -28,7 +27,7 @@
             <div id="game"></div>
             <footer>
                 <div>
-                    <div class="explanation" data-electronic="PowerSource">
+                    <div class="explain" data-electronic="PowerSource">
                         <svg viewbox="0 0 25 25" version="1.1" xmlns="http://www.w3.org/2000/svg" width="25" height="25">
                         </svg>
                         <p>
@@ -65,6 +64,6 @@
                 </p>
             </footer>
         </div>
-        <script type="text/javascript" data-main="app.min.js" src="require.min.js"></script>
+        <script data-main="app.min.js" src="require.min.js"></script>
     </body>
 </html>
