Fix link to repo.

--- a/game.html
+++ b/game.html
@@ -49,7 +49,7 @@
                         </p>
                 </div>
                 <p id="fork-on-github">
-                    <a href="https://github.com/Ryuno-Ki/Ryuno-Ki.github.io/tree/master/js13kgames" target="_blank"
+                    <a href="https://github.com/Ryuno-Ki/js13kgames" target="_blank"
                        rel="nofollow">
                         Fork me on GitHub!
                     </a>
